@@ -17,10 +17,10 @@
 	
 	session_start();
 	
-	include('./inc/functions.php');
-	include('../inc/config.php');
+	require('./inc/functions.php');
+	require('../inc/config.php');
 	placeto_config_unset();
-	include('./key.php');
+	require('./key.php');
 	
 	if (!$mysql=@mysql_connect($sql_login['server'], placeto_safe_sql($_SESSION['myuser']), placeto_key_decrypt(placeto_safe_sql($_SESSION['mypass']), $key)))
 	{
