@@ -17,10 +17,10 @@
 	
 	session_start();
 	
-	include('./inc/functions.php');
-	include('../inc/config.php');
+	require('./inc/functions.php');
+	require('../inc/config.php');
 	placeto_config_unset();
-	include('./key.php');
+	require('./key.php');
 	
 	if (!$mysql=@mysql_connect($sql_login['server'], placeto_safe_sql($_SESSION['myuser']), placeto_key_decrypt(placeto_safe_sql($_SESSION['mypass']), $key)))
 	{
@@ -52,25 +52,12 @@
 		//header('Location: ./pages.php');
 		die();
 	}
+	
+	require('./inc/template.php');
+	template_header();
 ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="include/styles.css" />
-		<link rel="shortcut icon" href="../admin/images/favicon.ico" type="image/x-icon" />
-		<link rel="icon" href="../admin/images/favicon.ico" type="image/x-icon"/>
-		<title>Placeto</title>
-	</head>
-	<body>
-		<div id="container">
-			<div id="box">
-				<div id="top">
-					<a href="./">
-						<img id="logo" src="images/logo.png" alt="Placeto" />
-					</a>
-				</div>
-				<div id="content">
+		<title>Placeto CMS - Delete Page</title>
+<?php template_box_top(); ?>
                 	<a href="./logout.php">Logout</a><br />
                 	<a href="./pages.php">&lt;&lt; Go Back</a><br /><br />
 
@@ -93,12 +80,4 @@
                     	<input type="hidden" name="confirm" value="true" />
                         <input type="submit" value="Confirm" />
                     </form>
-				</div>
-				<div id="bottom"></div>
-			</div>
-			<div id="copy">
-				Placeto &copy; <a href="http://www.blahertech.org">BlaherTech</a> 2009-2010
-			</div>
-		</div>
-	</body>
-</html>
+<?php template_box_bottom(); ?>
