@@ -1,3 +1,10 @@
+Alpha Rv.5
+* Added EditArea, for source syntax highlighting
+* Revised robots.txt
+* Changed copyright links
+* Added "Powered by Placeto" to templates
+* Added "View Page" link to edit.php
+
 Alpha Rv.4
 * Revised and finished btdeflate mod
 * Fixed cache mod's directory check
@@ -11,6 +18,8 @@ Alpha Rv.4
 * Moved the template settings fron config to DB
 * Renamed desc to description
 * Added working draft for the admin
+* Added CKEditor as a WYSIWYG
+
 
 Alpha Rv.3
 * Added security by rename mod's index.php to mod.php
